--- a/settings.json
+++ b/settings.json
@@ -1,18 +1,18 @@
 {
-    "self_mode": false,
+    "self_mode": true,
 	"autobio": false,
 	"antihidetag": true,
 	"user_register": true,
 	"anti_delete" : false,
-	"anticall": true,
+	"anticall": false,
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "62887435047326",
-	"ownerNumberr": "62887435047326",
-	"cr": "@ZeeoneOfc",
-	"ownername": "ZeeoneOfc",
-	"botname":"ΛᄂPΉΛ BӨƬ",
+	"ownerNumber": "6285717026352",
+	"ownerNumberr": "6285717026352",
+	"cr": "@Shenkai",
+	"ownername": "Shenkai",
+	"botname":"SHENKAI-SELF",
 	"thumb":"thumbnail_1.jpg",
 	"fakethumb":"thumbnail_1.jpg", 
-	"fake": " 「  ΛᄂPΉΛ BӨƬ  」\nCreated By @ZeeoneOfc"
+	"fake": " 「  SHENKAI  」\nCreated By @Shenkai"
 }
